# project_base_learning

os-elephant/: bochsrc.disk  hd3M.img  log.bochsrc.disk  makefile  run.sh
os-elephant/kernel/: main.c  memory.c  memory.h
os-elephant/thread/: thread.c  thread.h
toyos/: CMakeLists.txt  build.sh  compile_commands.json  run.sh
toyos/.cache/clangd/index/: Main.cpp.51FDCBAE2D1AB37F.idx  printk.cpp.4EEA41E656F79996.idx  printk.hpp.F1BED8AF5EB2BD74.idx  riscvreg.hpp.751CD391C31294B9.idx  sbi.cpp.696BCC4259E5A19A.idx  sbi.hpp.2EBEDB9FF5B900CA.idx  stdarg.h.0F176C5B0D6DEC45.idx  stddef.h.4CDA67828EDF7456.idx  stdint.h.B51DA7E135A30928.idx  string.cpp.78D6D2EC6FD906A8.idx  string.h.E8A2D8896C5DA50F.idx  vsprintf.cpp.A67440E28ADAB8EA.idx
toyos/Kernel/: CMakeLists.txt
toyos/Kernel/Arch/: CMakeLists.txt
toyos/Kernel/Arch/riscv/: CMakeLists.txt  KernelMain.cpp  boot.S  riscvreg.h  sbi.cpp  sbi.h
toyos/Util/: Singleton.h
toyos/kernel/: CMakeLists.txt
toyos/kernel/arch/riscv/boot/: boot.S  ldscript.riscv
toyos/kernel/arch/riscv/riscv/: CMakeLists.txt  Main.cpp  printk.cpp  printk.hpp  sbi.cpp  sbi.hpp
toyos/kernel/libc/: CMakeLists.txt
tptfs/: Makefile  tpt.h  tpt_subr.c  tpt_vfsops.c  tpt_vnops.c
